--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -12,7 +12,8 @@
   justify-content: space-between;
   align-items: center;
   gap: 50px;
-  padding: 15px 30px;
+  padding: 10px 30px;
+  overflow-x: hidden;
 }
 
 .dark .header {
@@ -23,6 +24,17 @@
 
 .logo {
   width: 240px;
+}
+
+.light .st0 {
+  fill: var(--dark);
+}
+
+.dark .st0 {
+  fill: var(--light);
+}
+.st1 {
+  fill: #808083;
 }
 
 .nav {
@@ -51,12 +63,32 @@
   font-size: 30px;
   transition: 0.3s;
   position: absolute;
-  background-color: white;
+  background-color: var(--light);
+}
+
+#XMLID_27_ {
+  animation: springBoard 4s;
+}
+
+@keyframes springBoard {
+  0% {
+    transform: scaleX(-1);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+  50% {
+    transform: scaleX(6.5);
+  }
 }
 
 @media only screen and (max-width: 767px) {
+  .header {
+    max-width: 100%;
+    position: fixed;
+  }
   .logo {
-    width: 160px;
+    width: 180px;
   }
   .menu-icon {
     display: block;
@@ -67,13 +99,12 @@
     position: absolute;
     top: 0;
     right: 0;
-    background-color: var(--light);
+    background-color: white;
     height: 100vh;
     width: 50%;
     padding: 20px;
     margin-top: 66px;
     transition: 0.3s;
-    overflow: hidden;
     transform: translateX(100%);
   }
   .dark .nav {
@@ -82,6 +113,7 @@
   }
   .active {
     transform: translateX(0%);
+    overflow-x: visible;
   }
   .nav a {
     border-bottom: 1px solid rgb(206, 206, 206);
